update project links

--- a/index.html
+++ b/index.html
@@ -99,22 +99,23 @@
 
         
         <!-- portfolio item 01 -->
-        <a href="#" class="portfolio__item">
+        <a href="https://github.com/mohaelmi/MidtermProject" target="_blank" title="Learn More" class="portfolio__item">
           <img src="assets/projects/midterm-main-page.png" alt="" class="portfolio__img" />
+          <!-- <button><a></a>Learn More</button> -->
         </a>
 
         <!-- portfolio item 02 -->
-        <a href="#" class="portfolio__item">
+        <a href="https://github.com/mohaelmi/PhotoLabs" class="portfolio__item" target="_blank" title="Learn More">
           <img src="assets/projects/PhotoLabs-main-page.png" alt="" class="portfolio__img" />
         </a>
         
         <!-- portfolio item 03 -->
-        <a href="#" class="portfolio__item">
+        <a href="https://github.com/mohaelmi/LightBnB" target="_blank" class="portfolio__item" title="Learn More">
           <img src="assets/projects/LightBnB-front.png" alt="" class="portfolio__img" />
         </a>
 
         <!-- portfolio item 04 -->
-        <a href="#" class="portfolio__item">
+        <a href="#=https://github.com/mohaelmi/TaskMgt" target="_blank" class="portfolio__item" title="Learn More">
           <img src="assets/projects/final-main-page.png" alt="" class="portfolio__img" />
         </a>
 
@@ -123,15 +124,15 @@
 
     <!-- footer -->
     <footer class="footer">
-      <a href="mailto:galayr133@hotmail.com" class="footer__link">galayr133@hotmail.com</a>
+      <a href="mailto:galayr133@hotmail.com" class="footer__link">Contact By Email</a>
       <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__link" href="#">
+            <a class="social-list__link" href="https://github.com/mohaelmi?tab=repositories" target="_blank">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link" href="#">
+            <a class="social-list__link" href="https://www.linkedin.com/in/moha-elmi/" target="_blank">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
