style skills section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
       </div>
 
-      <div class="skills">
+      <!-- <div class="skills">
         <p class="section__subtitle-skills">Skills</p>
         <ul>
           <li>JAVASCRIPT</li>
@@ -84,10 +84,80 @@
           <li>SQL</li>
           <li>MOCH AND CHAI</li>
         </ul>
-      </div>
+      </div> -->
 
+
+    <!-- skills section -->
+
+  <div class="skills">
+   
+    <ul>
+      <li>
+        <div class="container">
+          <div class="tech_skills html"><span>HTML</span><span>90%</span></div>
+        </div>
+      </li>
+      <li>
+        <div class="container">
+          <div class="tech_skills css"><span>CSS</span><span>90%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills js"><span>JavaScript</span><span>90%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills react"><span>React.JS</span><span>85%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills node"><span>Node.JS</span><span>75%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills express"><span>Express.JS</span><span>80%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills ruby-on-rails"><span>Ruby on Rails</span><span>60%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills testing"><span>Unit Testing</span><span>60%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills postgres"><span>PostgresSQL</span><span>85%</span></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="container">
+          <div class="tech_skills sql"><span>SQL</span><span>90%</span></div>
+        </div>
+      </li>
+    </ul>
+
+  </div>
+
+   
       <!-- <img src="assets/images/background-photo.avif" alt="me" class="about-me__img" /> -->
     </section>
+
 
     <!-- projects -->
 
